<resources>
    <string name="app_name">Broga Nua</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="hintName">Name</string>
    <string name="hintPassword">Password</string>
    <string name="login">Login</string>
    <string name="no_of_incorrect_attemps">No. of incorrect attemps:</string>
    <string name="newUserRegister">New User? Register</string>
    <string name="register">Register</string>
    <string name="alreadyRegisteredLogin">Already Registered? Login</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset">Reset Password</string>
    <string name="age">Age</string>
    <string name="shoe_size_eu">Shoe Size (EU)</string>
    <string name="profilepicture">profilePicture</string>
    <string name="name_colon">Name:</string>
    <string name="age_colon">Age:</string>
    <string name="email_colon">Email:</string>
    <string name="shoe_size_eu_colon">Shoe Size (EU):</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="change_password">Change Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_password">Enter Password:</string>
    <string name="save">Save</string>

</resources>
